# vite-task

./: .clippy.toml  .gitignore  .non-vite.clippy.toml  .oxfmtrc.json  .rustfmt.toml  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  dprint.json  hidden-dazzling-spring.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
crates/fspy/: Cargo.toml  README.md  build.rs
crates/fspy/examples/: cli.rs
crates/fspy/src/: arena.rs  artifact.rs  command.rs  error.rs  ipc.rs  lib.rs
crates/fspy/src/unix/: macos_artifacts.rs  mod.rs
crates/fspy/src/windows/: mod.rs
crates/fspy/tests/: node_fs.rs  oxlint.rs  rust_std.rs  rust_tokio.rs  shebang.rs  static_executable.rs  test_utils.rs  winapi.rs
crates/fspy/tests/test_utils/: mod.rs
crates/fspy_detours_sys/: Cargo.toml
crates/fspy_detours_sys/src/: generated_bindings.rs  lib.rs
crates/fspy_detours_sys/tests/: bindings.rs
crates/fspy_e2e/: .clippy.toml  Cargo.toml
crates/fspy_e2e/src/: main.rs
crates/fspy_preload_unix/: Cargo.toml
crates/fspy_preload_unix/src/: lib.rs  libc.rs
crates/fspy_preload_unix/src/client/: convert.rs  mod.rs  raw_exec.rs
crates/fspy_preload_unix/src/interceptions/: access.rs  dirent.rs  linux_syscall.rs  mod.rs  open.rs  stat.rs
crates/fspy_preload_unix/src/macros/: linux.rs  macos.rs  mod.rs
crates/fspy_preload_windows/: Cargo.toml
crates/fspy_preload_windows/src/: lib.rs
crates/fspy_preload_windows/src/windows/: client.rs  convert.rs  detour.rs  mod.rs  winapi_utils.rs
crates/fspy_seccomp_unotify/: Cargo.toml
crates/fspy_seccomp_unotify/src/: lib.rs  target.rs
crates/fspy_seccomp_unotify/src/bindings/: alloc.rs  mod.rs
crates/fspy_seccomp_unotify/src/payload/: filter.rs  mod.rs
crates/fspy_seccomp_unotify/src/supervisor/: listener.rs  mod.rs
crates/fspy_seccomp_unotify/tests/: arg_types.rs
crates/fspy_shared/: Cargo.toml
crates/fspy_shared/src/: lib.rs
crates/fspy_shared/src/ipc/: mod.rs  native_path.rs  native_str.rs
crates/fspy_shared/src/windows/: mod.rs
crates/fspy_shared_unix/: Cargo.toml
crates/fspy_shared_unix/src/: elf.rs  lib.rs  payload.rs
crates/fspy_shared_unix/src/exec/: mod.rs  shebang.rs  which.rs
crates/fspy_shared_unix/src/spawn/: macos.rs  mod.rs
crates/pty_terminal/: Cargo.toml  README.md
crates/pty_terminal/src/: lib.rs  musl_spawn.rs  terminal.rs
crates/pty_terminal/tests/: terminal.rs
crates/pty_terminal_test/: Cargo.toml  README.md
crates/pty_terminal_test/src/: lib.rs
crates/pty_terminal_test/tests/: milestone.rs  milestone_stress.rs
crates/subprocess_test/: Cargo.toml  README.md
crates/subprocess_test/src/: lib.rs
crates/vite_glob/: Cargo.toml
crates/vite_glob/src/: anchored.rs  error.rs  lib.rs  walk.rs
crates/vite_graph_ser/: Cargo.toml
crates/vite_graph_ser/src/: lib.rs
crates/vite_path/: .clippy.toml  Cargo.toml
crates/vite_path/src/: absolute.rs  lib.rs  relative.rs
crates/vite_path/src/absolute/: mod.rs  redaction.rs
crates/vite_pty/: Cargo.toml
crates/vite_pty/src/: geo.rs  lib.rs  terminal.rs
crates/vite_pty/tests/: terminal.rs
crates/vite_select/: Cargo.toml
crates/vite_select/src/: fuzzy.rs  interactive.rs  lib.rs
crates/vite_shell/: Cargo.toml
crates/vite_shell/src/: lib.rs
crates/vite_str/: Cargo.toml
crates/vite_str/src/: lib.rs
crates/vite_task/: Cargo.toml  README.md
crates/vite_task/docs/: boolean-flags.md  pnpm-filter.md  rfc-cache-fingerprint-ignore-patterns.md  task-cache.md  task-query.md  task-recursion.md  terminologies.md  vite-run.md  wildcard-env-patterns.md  workspace-root.md
crates/vite_task/fixtures/fingerprint-ignore-test/: README.md  vite-task.json
crates/vite_task/src/: cache.rs  cli.rs  cmd.rs  collections.rs  error.rs  execute.rs  fingerprint.rs  fs.rs  install.rs  lib.rs  maybe_str.rs  reporter.rs  schedule.rs  session.rs  ui.rs  workspace.rs
crates/vite_task/src/cli/: mod.rs
crates/vite_task/src/config/: mod.rs  task_command.rs  task_graph_builder.rs  workspace.rs
crates/vite_task/src/execute/: cache.rs  execute_plan.rs  mod.rs  reporter.rs
crates/vite_task/src/reporter/: mod.rs  stream.rs
crates/vite_task/src/session/: cache.rs  event.rs  mod.rs  reporter.rs
crates/vite_task/tests/: snapshots.rs
crates/vite_task/tests/plan_snapshots/: main.rs
crates/vite_task/tests/snapshots/: snapshots__query - ambiguous task name@transitive-dependency-workspace.snap  snapshots__query - explicit package name under non-package cwd@transitive-dependency-workspace.snap  snapshots__query - ignore depends on@transitive-dependency-workspace.snap  snapshots__query - recursive and transitive@transitive-dependency-workspace.snap  snapshots__query - recursive@transitive-dependency-workspace.snap  snapshots__query - transitive in package without the task@transitive-dependency-workspace.snap  snapshots__query - transitive non existent task@transitive-dependency-workspace.snap  snapshots__query - transitive@transitive-dependency-workspace.snap  snapshots__task graph@cache-sharing.snap  (+9 more)
crates/vite_task_bin/: Cargo.toml
crates/vite_task_bin/src/: lib.rs  main.rs  vite.rs
crates/vite_task_bin/test_bins/: README.md  package.json  readfile.mjs
crates/vite_task_bin/tests/: snap_tests.rs  snapshots.rs
crates/vite_task_graph/: Cargo.toml  README.md  run-config.ts  task-config.ts
crates/vite_task_graph/src/: builder.rs  config.rs  display.rs  lib.rs  loader.rs  package_graph.rs  query.rs  specifier.rs
crates/vite_task_graph/tests/: snapshots.rs
crates/vite_task_plan/: Cargo.toml  README.md
crates/vite_task_plan/src/: builtin.rs  cache_metadata.rs  context.rs  envs.rs  error.rs  execution_graph.rs  expand.rs  in_process.rs  lib.rs  path_env.rs  plan.rs  plan_request.rs  task_request.rs
crates/vite_tui/: Cargo.toml
crates/vite_tui/src/: action.rs  app.rs  config.rs  logging.rs  tui.rs
crates/vite_workspace/: Cargo.toml
crates/vite_workspace/src/: error.rs  lib.rs  package.rs  package_filter.rs  package_graph.rs  package_manager.rs
(+824 files in other folders)
