[workspace]
resolver = "3"
members = ["bench", "crates/*", "packages/cli/binding"]

[workspace.package]
authors = ["Vite+ Authors"]
edition = "2024"
license = "MIT"
rust-version = "1.88.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[workspace.dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
brush-parser = "0.2.18"
bstr = "1.12.0"
clap = "4.5.40"
color-eyre = "0.6.5"
compact_str = "0.9.0"
criterion = { version = "0.7", features = ["html_reports"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dashmap = "6.1.0"
diff-struct = "0.5.3"
directories = "6.0.0"
edit = "0.1.5"
fspy = { path = "crates/fspy" }
fspy_preload_unix = { path = "crates/fspy_preload_unix", artifact = "cdylib" }
fspy_preload_windows = { path = "crates/fspy_preload_windows", artifact = "cdylib" }
fspy_seccomp_unotify = { path = "crates/fspy_seccomp_unotify" }
fspy_shared = { path = "crates/fspy_shared" }
fspy_shared_unix = { path = "crates/fspy_shared_unix" }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
itertools = "0.14.0"
nix = { version = "0.30.1", features = ["dir"] }
passfd = { git = "https://github.com/polachok/passfd", rev = "d55881752c16aced1a49a75f9c428d38d3767213", default-features = false }
petgraph = "0.8.2"
portable-pty = "0.9.0"
ratatui = "0.29.0"
rayon = "1.10.0"
ref-cast = "1.0.24"
relative-path = "2.0.1"
rusqlite = "0.37.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
shell-escape = "0.1.5"
supports-color = "3.0.1"
tempfile = "3.14.0"
thiserror = "2"
tokio = "1.46.1"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
tui-term = "0.2.0"
twox-hash = "2.1.1"
vite_error = { path = "crates/vite_error" }
vite_package_manager = { path = "crates/vite_package_manager" }
vite_path = { path = "crates/vite_path" }
vite_str = { path = "crates/vite_str" }
vite_task = { path = "crates/vite_task" }
wax = "0.6.0"
wildmatch = "2.4.0"

napi = { version = "3.0.0", default-features = false, features = ["async", "error_anyhow"] }
napi-build = "2"
napi-derive = { version = "3.0.0", default-features = false, features = ["type-def", "strict"] }

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.
