[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Vite+ Authors"]
edition = "2024"
license = "BUSL-1.1"
rust-version = "1.88.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[workspace.dependencies]
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc", "std"] }
anyhow = "1.0.98"
assert2 = "0.3.16"
assertables = "9.8.1"
attohttpc = { version = "0.30.1", features = ["tls-native", "tls-native-vendored"], default-features = false }
base64 = "0.22.1"
bincode = "2.0.1"
bindgen = "0.72.1"
brush-parser = "0.2.18"
bstr = { version = "1.12.0", default-features = false, features = ["alloc", "std"] }
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
bytemuck = { version = "1.23.0", features = ["extern_crate_alloc", "must_cast"] }
cc = "1.2.39"
color-eyre = "0.6.5"
compact_str = "0.9.0"
const_format = "0.2.34"
constcat = "0.6.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
ctor = "0.6"
dashmap = "6.1.0"
diff-struct = "0.5.3"
directories = "6.0.0"
elf = { version = "0.8.0", default-features = false }
flate2 = "1.0.35"
fspy = { path = "crates/fspy" }
fspy_detours_sys = { path = "crates/fspy_detours_sys" }
fspy_preload_unix = { path = "crates/fspy_preload_unix", artifact = "cdylib" }
fspy_preload_windows = { path = "crates/fspy_preload_windows", artifact = "cdylib" }
fspy_seccomp_unotify = { path = "crates/fspy_seccomp_unotify" }
fspy_shared = { path = "crates/fspy_shared" }
fspy_shared_unix = { path = "crates/fspy_shared_unix" }
fspy_test_utils = { path = "crates/fspy_test_utils" }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
itertools = "0.14.0"
libc = "0.2.172"
memmap2 = "0.9.7"
nix = { version = "0.30.1", features = ["dir"] }
ntapi = "0.4.1"
os_str_bytes = "7.1.1"
ouroboros = "0.18.5"
owo-colors = "4.1.0"
passfd = { git = "https://github.com/polachok/passfd", rev = "d55881752c16aced1a49a75f9c428d38d3767213", default-features = false }
petgraph = "0.8.2"
phf = { version = "0.11.3", features = ["macros"] }
portable-pty = "0.9.0"
rand = "0.9.1"
ratatui = "0.29.0"
rayon = "1.10.0"
ref-cast = "1.0.24"
rusqlite = "0.37.0"
rustc-hash = "2.1.1"
seccompiler = { git = "https://github.com/branchseer/seccompiler", branch = "seccomp-action-raw" }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
sha2 = "0.10.9"
shared_memory = "0.12.4"
shell-escape = "0.1.5"
smallvec = { version = "2.0.0-alpha.11", features = ["std"] }
stackalloc = "1.2.1"
supports-color = "3.0.1"
syscalls = { version = "0.6.18", default-features = false }
tar = "0.4.43"
tempfile = "3.14.0"
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2"
tokio = "1.48.0"
tokio-util = "0.7.17"
toml = "0.9.5"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
tui-term = "0.2.0"
twox-hash = "2.1.1"
uuid = "1.18.1"
vite_glob = { path = "crates/vite_glob" }
vite_path = { path = "crates/vite_path" }
vite_str = { path = "crates/vite_str" }
vite_workspace = { path = "crates/vite_workspace" }
wax = "0.6.0"
which = "8.0.0"
widestring = "1.2.0"
winapi = "0.3.9"
winsafe = { version = "0.0.24", features = ["kernel"] }
xxhash-rust = { version = "0.8.15", features = ["const_xxh3"] }

[workspace.metadata.cargo-shear]
# These are artifact dependencies. They are not directly `use`d in Rust code.
ignored = ["fspy_preload_unix", "fspy_preload_windows", "fspy_test_bin"]

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.
