[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Vite+ Authors"]
edition = "2024"
license = "MIT"
rust-version = "1.88.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"
long_running_const_eval = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
undocumented_unsafe_blocks = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

[workspace.dependencies]
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc", "std"] }
anyhow = "1.0.98"
assert2 = "0.3.16"
assertables = "9.8.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "2.0.1"
bindgen = "0.72.1"
bitflags = "2.10.0"
# The newest released version (0.3.0) of brush-parser has a bug that reports incorrect locations for some ast nodes.
# The latest commit has fixed it. TODO: switch back to released version when a new version is published.
brush-parser = { git = "https://github.com/reubeno/brush", rev = "dcb760933b10ee0433d7b740a5709b06f5c67c6b" }
bstr = { version = "1.12.0", default-features = false, features = ["alloc", "std"] }
bumpalo = { version = "3.17.0", features = ["allocator-api2"] }
bytemuck = { version = "1.23.0", features = ["extern_crate_alloc", "must_cast"] }
cc = "1.2.39"
clap = "4.5.53"
color-eyre = "0.6.5"
compact_str = "0.9.0"
const_format = "0.2.34"
constcat = "0.6.1"
copy_dir = "0.1.3"
cow-utils = "0.1.3"
cp_r = "0.5.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
ctor = "0.6"
ctrlc = "3.5.2"
derive_more = "2.0.1"
diff-struct = "0.5.3"
directories = "6.0.0"
elf = { version = "0.8.0", default-features = false }
flate2 = "1.0.35"
fspy = { path = "crates/fspy" }
fspy_detours_sys = { path = "crates/fspy_detours_sys" }
fspy_preload_unix = { path = "crates/fspy_preload_unix", artifact = "cdylib" }
fspy_preload_windows = { path = "crates/fspy_preload_windows", artifact = "cdylib" }
fspy_seccomp_unotify = { path = "crates/fspy_seccomp_unotify" }
fspy_shared = { path = "crates/fspy_shared" }
fspy_shared_unix = { path = "crates/fspy_shared_unix" }
futures = "0.3.31"
futures-util = "0.3.31"
insta = "1.44.3"
jsonc-parser = { version = "0.29.0", features = ["serde"] }
libc = "0.2.172"
memmap2 = "0.9.7"
monostate = "1.0.2"
nix = { version = "0.30.1", features = ["dir"] }
ntapi = "0.4.1"
nucleo-matcher = "0.3.1"
once_cell = "1.19"
os_str_bytes = "7.1.1"
ouroboros = "0.18.5"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
passfd = { git = "https://github.com/polachok/passfd", rev = "d55881752c16aced1a49a75f9c428d38d3767213", default-features = false }
path-clean = "1.0.1"
pathdiff = "0.2.3"
petgraph = "0.8.2"
phf = { version = "0.11.3", features = ["macros"] }
portable-pty = "0.9.0"
pretty_assertions = "1.4.1"
pty_terminal = { path = "crates/pty_terminal" }
pty_terminal_test = { path = "crates/pty_terminal_test" }
pty_terminal_test_client = { path = "crates/pty_terminal_test_client" }
rand = "0.9.1"
ratatui = "0.30.0"
rayon = "1.10.0"
ref-cast = "1.0.24"
regex = "1.11.3"
rusqlite = "0.37.0"
rustc-hash = "2.1.1"
seccompiler = { git = "https://github.com/branchseer/seccompiler", branch = "seccomp-action-raw" }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
sha2 = "0.10.9"
shared_memory = "0.12.4"
shell-escape = "0.1.5"
smallvec = { version = "2.0.0-alpha.12", features = ["std"] }
stackalloc = "1.2.1"
subprocess_test = { path = "crates/subprocess_test" }
supports-color = "3.0.1"
syscalls = { version = "0.6.18", default-features = false }
tar = "0.4.43"
tempfile = "3.14.0"
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2"
tokio = "1.48.0"
tokio-util = "0.7.17"
toml = "0.9.5"
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
ts-rs = { version = "11.1.0" }
tui-term = "0.3.1"
twox-hash = "2.1.1"
uuid = "1.18.1"
vec1 = "1.12.1"
vite_glob = { path = "crates/vite_glob" }
vite_graph_ser = { path = "crates/vite_graph_ser" }
vite_path = { path = "crates/vite_path" }
vite_select = { path = "crates/vite_select" }
vite_shell = { path = "crates/vite_shell" }
vite_str = { path = "crates/vite_str" }
vite_task = { path = "crates/vite_task" }
vite_task_bin = { path = "crates/vite_task_bin" }
vite_task_graph = { path = "crates/vite_task_graph" }
vite_task_plan = { path = "crates/vite_task_plan" }
vite_workspace = { path = "crates/vite_workspace" }
vt100 = "0.16.2"
wax = "0.7.0"
which = "8.0.0"
widestring = "1.2.0"
winapi = "0.3.9"
winsafe = { version = "0.0.24", features = ["kernel"] }
xxhash-rust = { version = "0.8.15", features = ["const_xxh3"] }

[workspace.metadata.cargo-shear]
ignored = [
  # These are artifact dependencies. They are not directly `use`d in Rust code.
  "fspy_preload_unix",
  "fspy_preload_windows",
]

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.
