[package]
name = "fspy"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
allocator-api2 = { workspace = true, features = ["alloc"] }
bincode = { workspace = true }
bstr = { workspace = true, default-features = false }
bumpalo = { workspace = true }
const_format = { workspace = true, features = ["fmt"] }
fspy_shared = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
ouroboros = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "process", "io-util", "sync"] }
which = { workspace = true, features = ["tracing"] }
xxhash-rust = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
fspy_seccomp_unotify = { workspace = true, features = ["supervisor"] }
nix = { workspace = true, features = ["uio"] }
tokio = { workspace = true, features = ["bytes"] }

[target.'cfg(unix)'.dependencies]
fspy_preload_unix = { workspace = true }
fspy_shared_unix = { workspace = true }
nix = { workspace = true, features = ["fs", "process", "socket", "feature"] }

[target.'cfg(target_os = "windows")'.dependencies]
fspy_detours_sys = { workspace = true }
fspy_preload_windows = { workspace = true }
winapi = { workspace = true, features = ["winbase", "securitybaseapi", "handleapi"] }
winsafe = { workspace = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
tempfile = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
csv-async = { workspace = true }
ctor = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-std"] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dev-dependencies]
fspy_test_bin = { path = "../fspy_test_bin", artifact = "bin", target = "aarch64-unknown-linux-musl" }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
fspy_test_bin = { path = "../fspy_test_bin", artifact = "bin", target = "x86_64-unknown-linux-musl" }

[build-dependencies]
anyhow = { workspace = true }
attohttpc = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
