[package]
name = "fspy_detours_sys"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
cc = { workspace = true }

[dependencies]
winapi = { workspace = true, features = [
  "minwindef",
  "libloaderapi",
  "processthreadsapi",
  "windef",
] }

[lints]
workspace = true

[dev-dependencies]
bindgen = { workspace = true }
cow-utils = { workspace = true }

[lib]
test = false
doctest = false
