[package]
name = "fspy_e2e"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
fspy = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
