[package]
name = "fspy_preload_unix"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(unix)'.dependencies]
anyhow = { workspace = true }
wincode = { workspace = true }
bstr = { workspace = true, default-features = false }
ctor = { workspace = true }
fspy_shared = { workspace = true }
fspy_shared_unix = { workspace = true }
libc = { workspace = true }
nix = { workspace = true, features = ["signal", "fs", "socket", "mman", "time"] }

[lints]
workspace = true
