[package]
name = "fspy_seccomp_unotify"
version = "0.1.0"
edition = "2024"
publish = false

[target.'cfg(target_os = "linux")'.dependencies]
bincode = { workspace = true }
libc = { workspace = true }
nix = { workspace = true, features = ["process", "fs", "poll", "socket", "uio"] }
passfd = { workspace = true, default-features = false, optional = true }
seccompiler = { workspace = true }
syscalls = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["net", "process", "io-util", "rt", "sync"] }
tracing = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
assertables = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true, features = ["fs"] }
test-log = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }

[features]
supervisor = ["dep:passfd", "passfd/async"]
target = ["dep:passfd"]

[lints]
workspace = true

[lib]
test = false
doctest = false
