[package]
name = "fspy_shared_unix"
version = "0.0.0"
edition.workspace = true
publish = false

[target.'cfg(unix)'.dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bstr = { workspace = true }
fspy_shared = { workspace = true }
nix = { workspace = true, features = ["fs"] }
stackalloc = { workspace = true }

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
elf = { workspace = true }
fspy_seccomp_unotify = { workspace = true, features = ["target"] }
memmap2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
phf = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
