[package]
name = "pty_terminal_test"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
portable-pty = { workspace = true }
pty_terminal = { workspace = true }
pty_terminal_test_client = { workspace = true }

[dev-dependencies]
crossterm = { workspace = true }
ctor = { workspace = true }
ntest = "0.9.5"
pty_terminal_test_client = { workspace = true, features = ["testing"] }
subprocess_test = { workspace = true, features = ["portable-pty"] }

[lints]
workspace = true

[lib]
test = false
doctest = false

[package.metadata.cargo-shear]
ignored = ["ctor"]
