[package]
name = "subprocess_test"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
ctor = { workspace = true }
fspy = { workspace = true, optional = true }

[features]
default = []
fspy = ["dep:fspy"]

[lints]
workspace = true
