[package]
name = "subprocess_test"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
ctor = { workspace = true }
fspy = { workspace = true, optional = true }
portable-pty = { workspace = true, optional = true }
rustc-hash = { workspace = true }

[features]
default = []
fspy = ["dep:fspy"]
portable-pty = ["dep:portable-pty"]

[lints]
workspace = true

[lib]
doctest = false
