[package]
name = "vite_glob"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
path-clean = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
vite_path = { workspace = true }
wax = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
vite_str = { workspace = true }

[lints]
workspace = true
