[package]
name = "vite_graph_ser"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
