[package]
name = "vite_path"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { workspace = true }
diff-struct = { workspace = true }
ref-cast = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
thiserror = { workspace = true }
vite_str = { workspace = true }

[features]
absolute-redaction = []

[lints]
workspace = true

[dev-dependencies]
assert2 = { workspace = true }
