[package]
name = "vite_pty"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
portable-pty = { workspace = true }
vt100 = { workspace = true }

[lints]
workspace = true
