[package]
name = "vite_shell"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
bincode = { workspace = true }
brush-parser = { workspace = true }
diff-struct = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shell-escape = { workspace = true }
vite_str = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
