[package]
name = "vite_str"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
diff-struct = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ts-rs = { workspace = true, optional = true, features = ["no-serde-warnings"] }

[features]
ts-rs = ["dep:ts-rs"]

[lints]
workspace = true

[lib]
doctest = false
