[package]
name = "vite_task"
version = "0.0.0"
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = ["derive"] }
brush-parser = { workspace = true }
bstr = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
diff-struct = { workspace = true }
fspy = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
owo-colors = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
shell-escape = { workspace = true }
supports-color = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-std", "macros"] }
tracing = { workspace = true }
twox-hash = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
vite_glob = { workspace = true }
vite_path = { workspace = true }
vite_str = { workspace = true }
vite_workspace = { workspace = true }
wax = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
