[package]
name = "vite_task_graph"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dprint-plugin-typescript = "0.95"
monostate = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
vec1 = { workspace = true, features = ["smallvec-v1"] }
vite_graph_ser = { workspace = true }
vite_path = { workspace = true }
vite_str = { workspace = true }
vite_workspace = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
ts-rs = { workspace = true, features = ["format"] }
vite_path = { workspace = true, features = ["ts-rs"] }
vite_str = { workspace = true, features = ["ts-rs"] }

[lints]
workspace = true
